add jwt tokens and redis. fix openapi
