# src/main/java/ru/shaxowskiy/javaspeakerclub/dto/AuthTokensResponse.java
@@ -1,0 +1,10 @@
+package ru.shaxowskiy.javaspeakerclub.dto;
+
+public record AuthTokensResponse(
+        String accessToken,
+        long accessTokenExpiresIn,
+        String refreshToken,
+        long refreshTokenExpiresIn,
+        AuthResponse user
+) {
+}
