# src/main/java/ru/shaxowskiy/javaspeakerclub/dto/RefreshRequest.java
@@ -1,0 +1,6 @@
+package ru.shaxowskiy.javaspeakerclub.dto;
+
+public record RefreshRequest(
+        String refreshToken
+) {
+}
